--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,15 @@
-numpy>=2.3.3
-pandas>=2.3.2
-scikit-learn>=1.7.2
-tensorflow>=2.16.0
-keras>=3.0.0
-flask>=2.3.0
-waitress>=2.1.2
+numpy>=1.21.0
+pandas>=1.3.0
+scikit-learn>=1.0.0
+tensorflow>=2.8.0
+keras>=2.8.0
+flask>=2.0.0
+waitress>=2.1.0
+openai>=1.0.0
+matplotlib>=3.5.0
+seaborn>=0.11.0
+jinja2>=3.0.0
+werkzeug>=2.0.0
+click>=8.0.0
+itsdangerous>=2.0.0
+blinker>=1.4.0
